# olist-store-seasonality-analysis

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: deploy-olist-store-presentation.yml
data/: datasets.json
data/processed/: README.md
data/raw/: README.md
notebooks/: README.md  final_analysis.ipynb
notes/: 00-brief.md  decomposition-plan.md  final-result-plan.md  graph-completion-plan.md  limitations.md  methodology.md
presentation/: README.md  assignment-questions.md  current-structure.md  package-lock.json  package.json  proposed-question-driven-structure.md  slides.md  speaker-notes.md  website-settings.json
presentation/styles/: index.css
references/: README.md
references/kaggle-notebooks/: analysis-olist-dataset-eda.ipynb  e-commerce-dataset-analysis.ipynb  olist-delivery-time-estimation.ipynb  olist-ecommerce-analysis-and-dashboard.ipynb  understanding-the-olist-ecommerce-dataset.ipynb
results/: README.md  final_summary.md  presentation_outline.md
results/final_figure_set/: README.md
results/tables/: business_impact_by_category_uplift.csv  business_impact_peak_vs_normal.csv  business_revenue_decomposition_peak_vs_normal.csv  category_monthly_line_metrics.csv  category_quarterly_line_metrics.csv  category_seasonality_ranking.csv  category_weekday_line_metrics.csv  category_weekly_line_metrics.csv  early_seasonality_feature_importance.csv  event_spikes.csv  (+25 more)
scripts/: README.md  download_data.py  regenerate_slide_figures.py  run_final_analysis.py  sync_slidev_figures.py  verify_slidev_chart_fit.py
src/: README.md
(+10 files in other folders)
