[project]
name = "olist-store-seasonality-analysis"
version = "0.1.0"
description = "Учебный аналитический проект: сезонность продаж Olist Store"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "jupyter>=1.1.1",
    "kaggle>=1.7.4.5",
    "matplotlib>=3.10.0",
    "numpy>=2.2.0",
    "pandas>=2.2.0",
    "pyarrow>=24.0.0",
    "scikit-learn>=1.6.0",
    "scipy>=1.15.0",
    "seaborn>=0.13.0",
    "statsmodels>=0.14.6",
    "tabulate>=0.10.0",
]

[tool.uv]
package = false
